[package]
name = "roteld"
version = "0.2.0"
authors = ["volumio"]
edition = "2018"

[dependencies]
serialport = "3.3.0"
argparse = "0.2.2"
ws = "0.9.1"

# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde.
serde = "1.0.104"

# Support for #[derive(Serialize, Deserialize)]. Required if you want Serde
# to work for structs and enums defined in your crate.
serde_derive = "1.0.104"

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0.48"
