[package]
name = "roteld"
version = "0.3.0"
authors = ["volumio"]
edition = "2021"

[dependencies]
serialport = "4.2.0"
argparse = "0.2.2"
ws = "0.9.2"
base64 = "0.13.0"
chrono = "0.4.19"

reqwest = { version = "0.11", features = ["blocking", "json"] }

log = "0.4.8"
env_logger = "0.9.0"
anyhow = "1.0.62"

# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde.
serde = "1.0.137"

# Support for #[derive(Serialize, Deserialize)]. Required if you want Serde
# to work for structs and enums defined in your crate.
serde_derive = "1.0.137"

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0.81"


